<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/create_group"
        android:icon="@drawable/ic_add_create_group"
        android:title="@string/create_team"
        app:showAsAction="always" />

    <item
        android:id="@+id/favourite"
        android:title="@string/favourite" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/exit"
        android:title="@string/exit" />

</menu>