<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="0dp"
    android:paddingTop="10dp"
    android:paddingEnd="0dp"
    android:paddingBottom="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover_password"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:hint="@string/enter_the_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="15dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/horizontal_gradient_color_design" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/teal_200"
            android:textSize="17dp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:background="@drawable/vertical_gradient_color_design" />

        <TextView
            android:id="@+id/recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/recover"
            android:textColor="@color/teal_200"
            android:textSize="17dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>