<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_and_green_register_login_background_gradient"
    tools:context=".Register_page">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_login_register_design"
        android:gravity="center"
        android:text="@string/booprachat"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/app_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/profile" />
    <!--android:src="@drawable/ic_baseline_account_circle_24"-->

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edt_focused_design"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="25dp"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_usernameErrorBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_username"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_usernameErrorBox"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edt_focused_design"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="25dp"
        android:hint="@string/e_mail"

        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_emailErrorBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_emailErrorBox"
        android:layout_centerHorizontal="true"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_lock_for_register_page"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/edt_focused_design"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_passwordErrorBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_toggle"
        android:layout_centerHorizontal="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_passwordErrorBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login_register_design"
        android:text="@string/Register"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtalready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:text="@string/already_have_an_account_login_here"
        android:textSize="15dp" />

</RelativeLayout>