<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings.Settings_Activity">

    <LinearLayout
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@drawable/yellow_and_green_status_bar_gradient"
        tools:ignore="Orientation" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/yellow_and_green_status_bar_gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/profile_text"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_text_view_for_profile_design"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profile"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="#828282"
                android:textSize="13dp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="30dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_wallpaper_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallpaper"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chatScreenWallpaperHomeScreenWallpaper"
                android:textColor="#828282"
                android:textSize="13dp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="30dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_language_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/language"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_typing_to_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="30dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_wallpaper_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/typing_to_wallpaper"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blocked_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="30dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/user_blocked" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/blocked_users"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="normal" />

    </LinearLayout>

</LinearLayout>